// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarEventScreen: Tests CalendarEventScreen: Shallow Render Component renders the component with a real event 1`] = `
<ScrollViewMock>
  <Component
    style={
      Object {
        "backgroundColor": "#fff",
        "justifyContent": "center",
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="SUMMARY"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="Test"
    />
    <TextInput
      allowFontScaling={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="DESCRIPTION"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="Test"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="LOCATION:"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="Test"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="START_TIME"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="Test"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="END_TIME"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="Test"
    />
  </Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Add to Calendar"
      />
    </Component>
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Remove Event"
      />
    </Component>
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Update Event"
      />
    </Component>
  </Component>
</ScrollViewMock>
`;

exports[`CalendarEventScreen: Tests CalendarEventScreen: Shallow Render Component renders the component without any real events 1`] = `
<ScrollViewMock>
  <Component
    style={
      Object {
        "backgroundColor": "#fff",
        "justifyContent": "center",
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="SUMMARY"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="DummyText"
    />
    <TextInput
      allowFontScaling={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="DESCRIPTION"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="DummyTitle"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="LOCATION:"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="DummyLocation"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="START_TIME"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="2019-02-27T16:00:00.000Z"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="END_TIME"
      style={
        Object {
          "height": 40,
        }
      }
      underlineColorAndroid="transparent"
      value="2019-02-27T18:00:00.000Z"
    />
  </Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Add to Calendar"
      />
    </Component>
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Remove Event"
      />
    </Component>
    <Component
      style={
        Object {
          "marginHorizontal": 5,
          "marginTop": 50,
        }
      }
    >
      <Button
        onPress={[Function]}
        title="Update Event"
      />
    </Component>
  </Component>
</ScrollViewMock>
`;
